Fix overflow issue by hiding it

--- a/expenses-web/src/app/features/features.component.scss
+++ b/expenses-web/src/app/features/features.component.scss
@@ -15,4 +15,5 @@
   grid-area: "content";
   height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
 }
